--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="main-container">
         <div class="main-item">
-            <img src="kasparkokod.png"/>
+            <img src="img/kasparkokod.png"/>
         </div>
     </div>
   </body>
