--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css"/>
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <title>Honzokód</title>
   </head>
   <body>
